Use kevinpapst/adminlte-bundle:^2.0 in favor of avanzu/AdminThemeBundle
Added to composer
- composer require symfony/security-bundle
- composer require doctrine/doctrine-fixtures-bundle
- composer require fzaninotto/faker --dev
- composer require maker

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
-</html>
+{% extends '@AdminLTE/layout/default-layout.html.twig' %}
+
+{% block logo_mini %}<b>I</b>M{% endblock %}
+{% block logo_large %}<b>Investment</b> Manager{% endblock %}
+
+{% block page_title %}{% endblock %}
