--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,13 @@
 {% extends '@AdminLTE/layout/default-layout.html.twig' %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
+    <!-- Ionicons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+{% endblock %}
+
 {% block logo_mini %}<b>I</b>M{% endblock %}
 {% block logo_large %}<b>Investment</b> Manager{% endblock %}
 
