--- a/templates/Components/Dialog/confirm-delete-dialog.html.twig
+++ b/templates/Components/Dialog/confirm-delete-dialog.html.twig
@@ -6,7 +6,7 @@
     <div class="modal-content">
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title">Delete {{ entity_name|trans|title }}</h4>
+            <h4 class="modal-title" id="#modalTitleDelete">Delete {{ entity_name|trans|title }}</h4>
         </div>
         <div class="modal-body">
             <p>Do you want to delete the {{ entity_name|trans|title }} "<span id="entity-title"></span>"?</p>
