--- a/templates/Components/Layout/index.html.twig
+++ b/templates/Components/Layout/index.html.twig
@@ -15,6 +15,22 @@
                         <i class="fa-plus-circle fa" aria-hidden="true"></i> Create new {{ entity_name|trans|lower }}</a>
                 </div>
                 <div class="box-body table-responsive no-padding">
+                    {# Printing success message. This section makes sense when creating/updating/deleteing entity. #}
+                    {% for message in app.flashes('success') %}
+                        {%  include 'Components/Alerts/alert-message.html.twig' with {
+                            'message_type': 'success',
+                            'message': message
+                        }%}
+                    {% endfor %}
+
+                    {# Printing error message. This section makes sense when creating/updating/deleteing entity. #}
+                    {% for message in app.flashes('error') %}
+                        {%  include 'Components/Alerts/alert-message.html.twig' with {
+                            'message_type': 'danger',
+                            'message': message
+                        }%}
+                    {% endfor %}
+
                     {% embed 'Components/Table/crud-manage-table.html.twig' %}
                     {% endembed %}
                 </div>
@@ -27,22 +43,6 @@
     {% endset %}
 
     {% set modal_body %}
-        {# Printing success message. This section makes sense when creating/updating/deleteing entity. #}
-        {% for message in app.flashes('success') %}
-        {%  include 'Components/Alerts/alert-message.html.twig' with {
-            'message_type': 'success',
-            'message': message
-        }%}
-        {% endfor %}
-
-        {# Printing error message. This section makes sense when creating/updating/deleteing entity. #}
-        {% for message in app.flashes('error') %}
-        {%  include 'Components/Alerts/alert-message.html.twig' with {
-            'message_type': 'danger',
-            'message': message
-        }%}
-        {% endfor %}
-
         {% embed 'Components/Layout/_box.html.twig'%}
             {% block _box %}
                 {% include 'Components/Form/_form-horizontal.html.twig' with {
@@ -50,7 +50,6 @@
                     'box_type': 'success',
                     'submit_icon': 'save',
                     'submit_type': 'Create',
-                    'data_model': 'data-dismiss=modal'
                 } %}
             {% endblock %}
         {% endembed %}
@@ -70,76 +69,83 @@
     {{ parent() }}
 
     <script>
-        // Implementation delete button on modal
-        $(document).on("click", ".entity-create", function () {
-            $('#background-modal-create').hide();
-
-            var form = $('#entity-form');
-            form.trigger("reset");
-
-            // As pointed out in comments,
-            // it is superfluous to have to manually call the modal.
-            var modal = $('#modal-create');
-            modal.modal('show');
-
-            modal.modal({ backdrop: 'static', keyboard: false })
-                .on('click', '#submit-btn', function(){
-                    form.submit();
-
-                    // Block the panel
-                    modal.modal({backdrop: 'static', keyboard: false});
-                    $('#modal-create .modal-dialog').hide();
-                    modal.css('text-align','center');
-
-                    $('#background-modal-create').show();
-                });
-        });
-
-        // Implementation delete button on modal
-        $(document).on("click", ".entity-delete", function () {
-            var $form = $(this);
-
-            var itemId = $form.data('id');
-            var itemTitle = $form.data('title');
-
-            $(".modal-footer #itemId").val( itemId );
-            $(".modal-body p span").text(itemTitle);
-
-
-            $('#background-modal-delete').hide();
-            // As pointed out in comments,
-            // it is superfluous to have to manually call the modal.
-            var modal = $('#modal-delete');
-            modal.modal('show');
-
-            // On delete confirm
-            modal.modal({ backdrop: 'static', keyboard: false })
-                .on('click', '#confirm-delete', function(){
-                    console.log('yes');
-                    $('#entity_' + itemId).submit();
-
-                    // Block the panel
-                    modal.modal({backdrop: 'static', keyboard: false});
-                    $('#modal-delete .modal-dialog').hide();
-                    modal.css('text-align','center');
-
-                    $('#background-modal-delete').show();
-                });
-        });
-
-        {% if extra_buttons is defined %}
         $(document).ready(function(){
-            $("#modal-show").on("show.bs.modal", function(e) {
-                $("#modal-show .modal-content")
-                    .html('{% filter spaceless %}{% include 'Components/Modal/spinner.html.twig' %}{% endfilter %}');
-                var href = $(e.relatedTarget).data('href');
-                $.get(href, function(data) {
-                    $("#modal-show .modal-content").html(data);
-                });
+            // Create crud manager instance.
+            // The instance will take care of add, update and remove entities and keep the table updated.
+            let $wrapper = $('.js-manager-table');
+            let $modal = $('#modal-delete');
+            let crudManagertable = new CRUDManageTable($wrapper, $modal);
 
+            // Implementation create button on modal
+            $(document).on("click", ".entity-create", function () {
+                $('#background-modal-create').hide();
+
+                var form = $('#entity-form');
+                form.trigger("reset");
+
+                // As pointed out in comments,
+                // it is superfluous to have to manually call the modal.
+                var modal = $('#modal-create');
+                modal.modal('show');
+
+                modal.modal({ backdrop: 'static', keyboard: false })
+                    .on('click', '#submit-btn', function(){
+                        form.submit();
+
+                        // Block the panel
+                        modal.modal({backdrop: 'static', keyboard: false});
+                        $('#modal-create .modal-dialog').hide();
+                        modal.css('text-align','center');
+
+                        $('#background-modal-create').show();
+                    });
             });
+
+        {#// Implementation delete button on modal#}
+        {#$(document).on("click", ".entity-delete", function () {#}
+            {#var $form = $(this);#}
+
+            {#var itemId = $form.data('id');#}
+            {#var itemTitle = $form.data('title');#}
+
+            {#$(".modal-footer #itemId").val( itemId );#}
+            {#$(".modal-body p span").text(itemTitle);#}
+
+
+            {#$('#background-modal-delete').hide();#}
+            {#// As pointed out in comments,#}
+            {#// it is superfluous to have to manually call the modal.#}
+            {#var modal = $('#modal-delete');#}
+            {#modal.modal('show');#}
+
+            {#// On delete confirm#}
+            {#modal.modal({ backdrop: 'static', keyboard: false })#}
+                {#.on('click', '#confirm-delete', function(){#}
+                    {#console.log('yes');#}
+                    {#$('#entity_' + itemId).submit();#}
+
+                    {#// Block the panel#}
+                    {#modal.modal({backdrop: 'static', keyboard: false});#}
+                    {#$('#modal-delete .modal-dialog').hide();#}
+                    {#modal.css('text-align','center');#}
+
+                    {#$('#background-modal-delete').show();#}
+                {#});#}
+        {#});#}
+
+        {#{% if extra_buttons is defined %}#}
+            {#$("#modal-show").on("show.bs.modal", function(e) {#}
+                {#$("#modal-show .modal-content")#}
+                    {#.html('{% filter spaceless %}{% include 'Components/Modal/spinner.html.twig' %}{% endfilter %}');#}
+                {#var href = $(e.relatedTarget).data('href');#}
+                {#$.get(href, function(data) {#}
+                    {#$("#modal-show .modal-content").html(data);#}
+                {#});#}
+
+            {#});#}
+        {#{% endif %}#}
         });
-        {% endif %}
     </script>
+    <script src="{{ asset('assets/js/table/crud-manage-table.js') }}"></script>
 {% endblock %}
 
