--- a/templates/transfer/index.html.twig
+++ b/templates/transfer/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'Components/Layout/index.html.twig' %}
+{% extends 'Components/Layout/ajax-index.html.twig' %}
 
 {% block stylesheets %}
     {{ parent() }}
@@ -25,6 +25,7 @@
 
 {% block javascripts %}
     {{ parent() }}
+
     <!-- bootstrap datepicker -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
