--- a/templates/Components/Modal/modal.html.twig
+++ b/templates/Components/Modal/modal.html.twig
@@ -13,7 +13,7 @@
     {% include 'Components/Dialog/' ~ dialog ~ '.html.twig'%}
     {% endif %}
     {% if request is defined %}
-    <i id="background-{{ modal_id }}" class="fa fa-hdd fa-4x" aria-hidden="true" style="display: none"></i>
+    <i class="fa fa-hdd fa-4x js-{{ modal_id }}-processing" aria-hidden="true" style="display: none"></i>
     {% endif %}
 </div><!-- /.modal -->
 <!-- Modal to block window after submit -->
